--- a/html/template/chat-app.html
+++ b/html/template/chat-app.html
@@ -1972,38 +1972,37 @@
         <div class="modal-body !p-0 min-h-[500px]">
           <div class="voicecall relative"><img class="h-[500px] w-[450px] opacity-70" src="../../assets/images/chat-app/12.jpg" alt="girl">
             <div class="voicecall-content flex flex-col gap-3 absolute items-center bottom-[10%] left-0 right-0">
-              <h3 class="font-bold text-white m-0 text-xl3">Dmitriy Groshev</h3>
-              <spa class="text-white font-semibold">LOG ANGELINA CALIFORNIA </spa>
+              <h3 class="font-bold text-white m-0 text-xl3">Dmitriy Groshev</h3><span class="text-white font-semibold">LOG ANGELINA CALIFORNIA </span>
               <ul class="flex gap-3 flex-wrap items-center justify-center">
                 <li> 
-                  <svg class="w-9 h-9 p-2 stroke-title bg-white rounded-full"> 
+                  <svg class="w-9 h-9 p-2 stroke-title bg-white rounded-full dark:bg-sidebar-dark2"> 
                     <use href="../../assets/svg/sprite.svg#Voice-2"> </use>
                   </svg>
                 </li>
                 <li> 
                   <label class="swap">
                     <input type="checkbox"><span class="text-3xl swap-on">
-                      <svg class="w-9 h-9 p-2 stroke-title bg-white rounded-full"> 
+                      <svg class="w-9 h-9 p-2 stroke-title bg-white rounded-full dark:bg-sidebar-dark2"> 
                         <use href="../../assets/svg/sprite.svg#Volume-Off"> </use>
                       </svg></span><span class="text-3xl swap-off">
-                      <svg class="w-9 h-9 p-2 stroke-title bg-white rounded-full"> 
+                      <svg class="w-9 h-9 p-2 stroke-title bg-white rounded-full dark:bg-sidebar-dark2"> 
                         <use href="../../assets/svg/sprite.svg#Volume-Up"> </use>
                       </svg></span>
                   </label>
                 </li>
                 <li>
                   <label for="voice-call-modal">
-                    <svg class="w-[4rem] h-[4rem] p-[12px] cursor-pointer stroke-white bg-danger rounded-full rotate-[132deg] relative"> 
+                    <svg class="w-[4rem] h-[4rem] p-[12px] cursor-pointer stroke-white bg-danger rounded-full  rotate-[132deg] relative"> 
                       <use href="../../assets/svg/sprite.svg#Call"> </use>
                     </svg>
                   </label>
                 </li>
-                <li> 
-                  <svg class="w-9 h-9 p-2 stroke-title bg-white rounded-full"> 
+                <li>
+                  <svg class="w-9 h-9 p-2 stroke-title bg-white rounded-full dark:bg-sidebar-dark2"> 
                     <use href="../../assets/svg/sprite.svg#Add-User"> </use>
                   </svg>
                 </li>
-                <li><i class="p-2 bg-white rounded-full w-9 h-9 stroke-title" data-feather="pause"></i></li>
+                <li><i class="p-2 bg-white rounded-full dark:bg-sidebar-dark2 w-9 h-9 stroke-title" data-feather="pause"></i></li>
               </ul>
             </div>
           </div>
@@ -2013,37 +2012,37 @@
     <div class="modal-main">
       <input class="peer" id="video-call-modal" name="video-call-modal" type="checkbox">
       <label class="modal-overlay peer-checked:block" for="video-call-modal"></label>
-      <div class="modal modal-center !min-w-[850px] lg:!min-w-[600px] 2md:!min-w-[450px] sm:!min-w-[300px] !h-[715px] lg:!h-[692px] 2md:!h-[400px] 2sm:!min-w-[200px] 2sm:!h-[250px] peer-checked:opacity-100 peer-checked:visible rounded-none">
+      <div class="modal modal-center !min-w-[850px] lg:!min-w-[600px] 2md:!min-w-[450px] sm:!min-w-[300px] !h-[715px] lg:!h-[692px] 2md:!h-[400px] 2sm:!min-w-[200px] 2sm:!h-[250px] peer-checked:opacity-100 peer-checked:visible rounded-none dark:bg-sidebar-dark2">
         <div class="modal-body !p-0">
           <div class="countdown flex gap-1 wrap items-center absolute top-[3%] z-[1] right-[5%] text-[36px] 2md:text-3xl-responsive text-white font-extrabold">
             <label id="callminutes">00</label><span>:</span>
             <label id="callseconds">00</label>
           </div>
           <div class="avatar rounded-none relative !min-w-[850px] !h-[400px] lg:!min-w-[600px] 2md:!min-w-[450px] sm:!min-w-[300px] 2sm:!min-w-[200px] 2sm:!h-[250px]"><img src="../../assets/images/chat-app/8.jpg" alt="avatar"></div>
-          <div class="video-setting flex justify-center items-center gap-2 py-4 2md:absolute 2md:bottom-[5%] 2md:left-0 2md:right-0">
+          <div class="video-setting flex justify-center items-center gap-2 py-4 2md:absolute 2md:bottom-[5%] 2md:left-0 2md:right-0 dark:bg-sidebar-dark2">
             <label class="swap">
               <input type="checkbox"><span class="text-3xl swap-on">
-                <svg class="w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full"> 
+                <svg class="w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full dark:bg-sidebar-dark"> 
                   <use href="../../assets/svg/sprite.svg#Volume-Off"> </use>
                 </svg></span><span class="text-3xl swap-off">
-                <svg class="w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full"> 
+                <svg class="w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full dark:bg-sidebar-dark"> 
                   <use href="../../assets/svg/sprite.svg#Volume-Up"> </use>
                 </svg></span>
             </label>
-            <svg class="w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full"> 
+            <svg class="w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full dark:bg-sidebar-dark"> 
               <use href="../../assets/svg/sprite.svg#Voice-2"> </use>
             </svg>
             <svg class="w-[60px] h-[60px] lg:w-[50px] lg:h-[50px] lg:p-[0.75rem] stroke-white cursor-pointer p-4 bg-danger rounded-full"> 
               <use href="../../assets/svg/sprite.svg#Calling"> </use>
             </svg>
-            <svg class="w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full"> 
+            <svg class="w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full dark:bg-sidebar-dark"> 
               <use href="../../assets/svg/sprite.svg#Video"> </use>
             </svg>
-            <svg class="w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full"> 
+            <svg class="w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full dark:bg-sidebar-dark"> 
               <use href="../../assets/svg/sprite.svg#Add-User"> </use>
             </svg>
           </div>
-          <div class="group-videocall flex gap-4 flex-wrap justify-center items-center lg:gap-2 2md:hidden"><img class="max-w-[200px] lg:max-w-[190px] h-[200px] rounded-none" src="../../assets/images/chat-app/9.jpg" alt="women wear black jacket"><img class="max-w-[200px] lg:max-w-[190px] h-[200px] rounded-none" src="../../assets/images/chat-app/10.jpg" alt="men in jacket"><img class="max-w-[200px] lg:max-w-[190px] h-[200px] rounded-none" src="../../assets/images/chat-app/11.jpg" alt="women in gray shirt"></div>
+          <div class="group-videocall flex gap-4 flex-wrap justify-center items-center lg:gap-2 2md:hidden dark:bg-sidebar-dark2"><img class="max-w-[200px] lg:max-w-[190px] h-[200px] rounded-none" src="../../assets/images/chat-app/9.jpg" alt="women wear black jacket"><img class="max-w-[200px] lg:max-w-[190px] h-[200px] rounded-none" src="../../assets/images/chat-app/10.jpg" alt="men in jacket"><img class="max-w-[200px] lg:max-w-[190px] h-[200px] rounded-none" src="../../assets/images/chat-app/11.jpg" alt="women in gray shirt"></div>
         </div>
       </div>
     </div>
