--- a/html/template/select.html
+++ b/html/template/select.html
@@ -1033,8 +1033,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="custom-select select-style-1"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="custom-select select-style-1"&gt;
   &lt;select&gt;
      &lt;option disabled selected&gt;Pick your favorite Simpson&lt;/option&gt;
      &lt;option&gt;Homer&lt;/option&gt;
@@ -1078,8 +1078,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="custom-select select-style-1 select-bg-white"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="custom-select select-style-1 select-bg-white"&gt;
   &lt;select&gt;
      &lt;option disabled selected&gt;Pick your favorite Simpson&lt;/option&gt;
      &lt;option&gt;Homer&lt;/option&gt;
@@ -1121,8 +1121,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="w-full max-w-xs border custom-select select-style-1 border-primary select-bg-white dark:bg-dark-dense"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="w-full max-w-xs border custom-select select-style-1 border-primary select-bg-white dark:bg-dark-dense"&gt;
   &lt;select&gt;
      &lt;option disabled selected&gt;Last 7 Days &lt;/option&gt;
      &lt;option&gt;Last 2 Weeks &lt;/option&gt;
@@ -1162,8 +1162,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="w-full max-w-xs border custom-select select-style-1 border-secondary select-bg-white dark:bg-dark-dense"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="w-full max-w-xs border custom-select select-style-1 border-secondary select-bg-white dark:bg-dark-dense"&gt;
   &lt;select&gt;
      &lt;option disabled selected&gt;Last 7 Days &lt;/option&gt;
      &lt;option&gt;Last 2 Weeks &lt;/option&gt;
@@ -1203,8 +1203,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="w-full max-w-xs border custom-select select-style-1 border-info select-bg-white dark:bg-dark-dense"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="w-full max-w-xs border custom-select select-style-1 border-info select-bg-white dark:bg-dark-dense"&gt;
   &lt;select&gt;
      &lt;option disabled selected&gt;Last 7 Days &lt;/option&gt;
      &lt;option&gt;Last 2 Weeks &lt;/option&gt;
@@ -1268,8 +1268,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="w-full max-w-xs border custom-select select-style-1 border-success select-bg-white dark:bg-dark-dense"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="w-full max-w-xs border custom-select select-style-1 border-success select-bg-white dark:bg-dark-dense"&gt;
   &lt;select&gt;
      &lt;option disabled selected&gt;Last 7 Days &lt;/option&gt;
      &lt;option&gt;Last 2 Weeks &lt;/option&gt;
@@ -1329,8 +1329,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;select class="w-full max-w-xs bg-white border-none select"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"> <i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;select class="w-full max-w-xs bg-white border-none select"&gt;
   &lt;option disabled selected&gt;Pick your favorite Simpson&lt;/option&gt;
   &lt;option&gt;Homer&lt;/option&gt;
   &lt;option&gt;Marge&lt;/option&gt; 
