--- a/html/template/user-card.html
+++ b/html/template/user-card.html
@@ -1436,12 +1436,12 @@
       <div class="modal-main">
         <input class="peer" id="modal-invite-user" name="modal-invite-user" type="checkbox">
         <label class="modal-overlay peer-checked:block" for="modal-invite-user"></label>
-        <div class="modal modal-center peer-checked:opacity-100 peer-checked:visible min-w-[290px]">
-          <div class="modal-header dark:bg-sidebar-dark2">
+        <div class="modal modal-center peer-checked:opacity-100 peer-checked:visible min-w-[290px] dark:bg-sidebar-dark2">
+          <div class="modal-header"> 
             <h3 class="text-title font-medium">Invite Members</h3>
             <label for="modal-invite-user"><i class="w-4 h-4 stroke-title" data-feather="x"></i></label>
           </div>
-          <div class="modal-body dark:bg-sidebar-dark2">
+          <div class="modal-body">
             <form class="theme-form flex flex-col gap-4 m-0">
               <div class="flex gap-2 items-center">
                 <input class="dark:bg-sidebar-dark" type="email" id="email" placeholder="Enter email id.." required>
