--- a/assets/pug/pages/template/chat-app.pug
+++ b/assets/pug/pages/template/chat-app.pug
@@ -90,29 +90,29 @@ html(lang='en')
             img(src="../../assets/images/chat-app/12.jpg" alt="girl" class="h-[500px] w-[450px] opacity-70")
             div.voicecall-content.flex.flex-col.gap-3.absolute.items-center(class="bottom-[10%] left-0 right-0")
               h3.font-bold.text-white.m-0.text-xl3 Dmitriy Groshev
-              spa.text-white.font-semibold LOG ANGELINA CALIFORNIA 
+              span.text-white.font-semibold LOG ANGELINA CALIFORNIA 
               ul.flex.gap-3.flex-wrap.items-center.justify-center
                 li  
-                  +SVG_ICON("Voice-2","w-9 h-9 p-2 stroke-title bg-white rounded-full" )
+                  +SVG_ICON("Voice-2","w-9 h-9 p-2 stroke-title bg-white rounded-full dark:bg-sidebar-dark2" )
                 li 
                   label.swap
                     input(type='checkbox')
                     span.text-3xl.swap-on
-                      +SVG_ICON("Volume-Off","w-9 h-9 p-2 stroke-title bg-white rounded-full" )
+                      +SVG_ICON("Volume-Off","w-9 h-9 p-2 stroke-title bg-white rounded-full dark:bg-sidebar-dark2" )
                     span.text-3xl.swap-off
-                      +SVG_ICON("Volume-Up","w-9 h-9 p-2 stroke-title bg-white rounded-full" )
+                      +SVG_ICON("Volume-Up","w-9 h-9 p-2 stroke-title bg-white rounded-full dark:bg-sidebar-dark2" )
                 li
                   label(for="voice-call-modal")
-                    +SVG_ICON("Call","w-[4rem] h-[4rem] p-[12px] cursor-pointer stroke-white bg-danger rounded-full rotate-[132deg] relative" )
-                li  
-                  +SVG_ICON("Add-User","w-9 h-9 p-2 stroke-title bg-white rounded-full" )
+                    +SVG_ICON("Call","w-[4rem] h-[4rem] p-[12px] cursor-pointer stroke-white bg-danger rounded-full  rotate-[132deg] relative" )
                 li
-                  i(data-feather="pause" ,class="p-2 bg-white rounded-full w-9 h-9 stroke-title")
+                  +SVG_ICON("Add-User","w-9 h-9 p-2 stroke-title bg-white rounded-full dark:bg-sidebar-dark2" )
+                li
+                  i(data-feather="pause" ,class="p-2 bg-white rounded-full dark:bg-sidebar-dark2 w-9 h-9 stroke-title")
     //- Video call modal
     div.modal-main
       input#video-call-modal(class="peer" name="video-call-modal" type='checkbox')
       label.modal-overlay(class="peer-checked:block" for='video-call-modal')
-      div.modal.modal-center(class="!min-w-[850px] lg:!min-w-[600px] 2md:!min-w-[450px] sm:!min-w-[300px] !h-[715px] lg:!h-[692px] 2md:!h-[400px] 2sm:!min-w-[200px] 2sm:!h-[250px] peer-checked:opacity-100 peer-checked:visible rounded-none")
+      div.modal.modal-center(class="!min-w-[850px] lg:!min-w-[600px] 2md:!min-w-[450px] sm:!min-w-[300px] !h-[715px] lg:!h-[692px] 2md:!h-[400px] 2sm:!min-w-[200px] 2sm:!h-[250px] peer-checked:opacity-100 peer-checked:visible rounded-none dark:bg-sidebar-dark2")
         div.modal-body(class="!p-0")
           div.countdown.flex.gap-1.wrap.items-center.absolute(class="top-[3%] z-[1] right-[5%] text-[36px] 2md:text-3xl-responsive text-white font-extrabold")
             label#callminutes 00
@@ -121,19 +121,18 @@ html(lang='en')
           div.avatar.rounded-none.relative(class="!min-w-[850px] !h-[400px] lg:!min-w-[600px] 2md:!min-w-[450px] sm:!min-w-[300px] 2sm:!min-w-[200px] 2sm:!h-[250px]")
             img(src='../../assets/images/chat-app/8.jpg' alt='avatar')
 
-          div.video-setting.flex.justify-center.items-center.gap-2.py-4(class="2md:absolute 2md:bottom-[5%] 2md:left-0 2md:right-0")
+          div.video-setting.flex.justify-center.items-center.gap-2.py-4(class="2md:absolute 2md:bottom-[5%] 2md:left-0 2md:right-0 dark:bg-sidebar-dark2")
             label.swap
               input(type='checkbox')
               span.text-3xl.swap-on
-                +SVG_ICON("Volume-Off","w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full")
+                +SVG_ICON("Volume-Off","w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full dark:bg-sidebar-dark")
               span.text-3xl.swap-off
-                +SVG_ICON("Volume-Up","w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full")
-            +SVG_ICON("Voice-2","w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full")
+                +SVG_ICON("Volume-Up","w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full dark:bg-sidebar-dark")
+            +SVG_ICON("Voice-2","w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full dark:bg-sidebar-dark")
             +SVG_ICON("Calling","w-[60px] h-[60px] lg:w-[50px] lg:h-[50px] lg:p-[0.75rem] stroke-white cursor-pointer p-4 bg-danger rounded-full")
-            +SVG_ICON("Video","w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full")
-            +SVG_ICON("Add-User","w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full")
-
-          div.group-videocall.flex.gap-4.flex-wrap.justify-center.items-center(class="lg:gap-2 2md:hidden")
+            +SVG_ICON("Video","w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full dark:bg-sidebar-dark")
+            +SVG_ICON("Add-User","w-[50px] h-[50px] lg:w-[35px] lg:h-[35px] lg:p-[0.5rem] stroke-title cursor-pointer p-[0.90rem] bg-gray-light rounded-full dark:bg-sidebar-dark")
+          div.group-videocall.flex.gap-4.flex-wrap.justify-center.items-center(class="lg:gap-2 2md:hidden dark:bg-sidebar-dark2")
             img(src='../../assets/images/chat-app/9.jpg' alt='women wear black jacket' class="max-w-[200px] lg:max-w-[190px] h-[200px] rounded-none")
             img(src='../../assets/images/chat-app/10.jpg' alt='men in jacket' class="max-w-[200px] lg:max-w-[190px] h-[200px] rounded-none")
             img(src='../../assets/images/chat-app/11.jpg' alt='women in gray shirt' class="max-w-[200px] lg:max-w-[190px] h-[200px] rounded-none")
