--- a/assets/pug/pages/template/user-card.pug
+++ b/assets/pug/pages/template/user-card.pug
@@ -59,12 +59,12 @@ html(lang='en')
       div.modal-main
         input#modal-invite-user(class="peer" name="modal-invite-user" type='checkbox')
         label.modal-overlay(class="peer-checked:block" for='modal-invite-user')
-        div.modal.modal-center(class="peer-checked:opacity-100 peer-checked:visible min-w-[290px]")
-          div.modal-header(class="dark:bg-sidebar-dark2")
+        div.modal.modal-center(class="peer-checked:opacity-100 peer-checked:visible min-w-[290px] dark:bg-sidebar-dark2")
+          div.modal-header 
             h3.text-title.font-medium Invite Members
             label(for="modal-invite-user")
               i(data-feather="x" class="w-4 h-4 stroke-title")
-          div.modal-body(class="dark:bg-sidebar-dark2")
+          div.modal-body
             form(class="theme-form flex flex-col gap-4 m-0")
               div.flex.gap-2.items-center
                 input(type="email" id="email" placeholder="Enter email id.." required class="dark:bg-sidebar-dark")
