--- a/html/template/form-validation.html
+++ b/html/template/form-validation.html
@@ -1038,8 +1038,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="checkout-detail"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="checkout-detail"&gt;
   &lt;form class="theme-form flex flex-col gap-4 !m-0"&gt;
      &lt;div&gt;
          &lt;label for="email1&gt;Email&lt;/label&gt; 
@@ -1077,11 +1077,11 @@
                       <div>    
                         <form class="flex flex-col gap-4 !m-0">
                           <div class="relative z-0 w-full mt-7 group">
-                            <input class="block px-0 w-full text-xs text-content3 bg-transparent border-0 border-b-2 border-border-light appearance-none peer py-2.5 dark:text-white dark:border-border-light dark:focus:border-primary focus:outline-none focus:ring-0 focus:border-primary" id="floating_email" type="email" name="floating_email" placeholder=" " required="">
+                            <input class="block px-0 w-full text-xs text-content3 bg-transparent border-0 border-b-2 border-border-light appearance-none peer py-2.5 dark:text-white dark:border-border-dark  dark:focus:border-primary focus:outline-none focus:ring-0 focus:border-primary" id="floating_email" type="email" name="floating_email" placeholder=" " required="">
                             <label class="absolute font-semibold text-xs text-content3 duration-300 transform -translate-y-9 top-3 -z-10 peer-focus:font-medium dark:text-content3 origin-[0] peer-focus:left-0 rtl:peer-focus:left-unset rtl:peer-focus:right-0 peer-focus:text-primary peer-focus:dark:text-content3 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:-translate-y-9" for="floating_email">Email</label>
                           </div>
-                          <div class="relative z-0 w-full mt-7 group">
-                            <input class="block px-0 w-full text-xs text-content3 bg-transparent border-0 border-b-2 border-border-light appearance-none peer py-2.5 dark:text-white dark:border-border-light dark:focus:border-primary focus:outline-none focus:ring-0 focus:border-primary" id="floating_password" type="password" name="floating_password" placeholder=" " required="">
+                          <div class="relative z-0 w-full mt-7 group"> 
+                            <input class="block px-0 w-full text-xs text-content3 bg-transparent border-0 border-b-2 border-border-light appearance-none peer py-2.5 dark:text-white dark:border-border-dark  dark:focus:border-primary focus:outline-none focus:ring-0 focus:border-primary" id="floating_password" type="password" name="floating_password" placeholder=" " required="">
                             <label class="absolute font-semibold text-xs text-content3 duration-300 transform -translate-y-9 top-3 -z-10 peer-focus:font-medium dark:text-content3 origin-[0] peer-focus:left-0 rtl:peer-focus:left-unset rtl:peer-focus:right-0 peer-focus:text-primary peer-focus:dark:text-content3 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:-translate-y-9" for="floating_password">Password</label>
                           </div>
                           <div class="flex justify-end items-center">
@@ -1091,15 +1091,15 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div&gt;
   &lt;form class="flex flex-col gap-4 !m-0"&gt;
      &lt;div class="relative z-0 w-full mt-7 group"&gt;
-         &lt;input type="email" id="#floating_email" required='' class="block w-full px-0 text-xs bg-transparent border-0 border-b-2 appearance-none text-content3 border-border-light peer"&gt;&lt;/input&gt; 
+         &lt;input type="email" id="#floating_email" required='' class="block w-full dark:border-b-2  px-0 text-xs bg-transparent border-0 border-b-2 appearance-none text-content3 border-border-light peer"&gt;&lt;/input&gt; 
          &lt;label for="floating_email" class="absolute text-xs duration-300 transform -translate-y-9  text-content3 top-3 -z-10 peer-focus:font-medium dark:text-content3 origin-[0] peer-focus:left-0 rtl:peer-focus:left-unset rtl:peer-focus:right-0 peer-focus:text-primary peer-focus:dark:text-content3 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:-translate-y-9"&gt;Email&lt;/label&gt; 
      &lt;/div&gt;
      &lt;div class="relative z-0 w-full mt-7 group"&gt;
-         &lt;input type="password" id="#floating_password" required='' class="block w-full px-0 text-xs bg-transparent border-0 border-b-2 appearance-none text-content3 border-border-light peer"&gt;&lt;/input&gt; 
+         &lt;input type="password" id="#floating_password" required='' class="block w-full  dark:border-b-2  px-0 text-xs bg-transparent border-0 border-b-2 appearance-none text-content3 border-border-light peer"&gt;&lt;/input&gt; 
          &lt;label for="floating_password" class="absolute text-xs duration-300 transform -translate-y-9  text-content3 top-3 -z-10 peer-focus:font-medium dark:text-content3 origin-[0] peer-focus:left-0 rtl:peer-focus:left-unset rtl:peer-focus:right-0 peer-focus:text-primary peer-focus:dark:text-content3 peer-placeholder-shown:scale-100 peer-placeholder-shown:translate-y-0 peer-focus:-translate-y-9"&gt;Password&lt;/label&gt; 
      &lt;/div&gt;                                                    
      &lt;div class="flex items-center justify-end"&gt;
@@ -1148,8 +1148,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="checkout-detail"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="checkout-detail"&gt;
   &lt;form class="flex flex-col gap-4 !m-0 theme-form" id="form-validation"&gt;
      &lt;div&gt;
          &lt;label for="username"&gt;Name&lt;/label&gt; 
@@ -1260,8 +1260,8 @@
                       </div>
                     </div>
                     <div class="relative tab-pan copyParent group first:rounded-tl-none rounded-5" data-tabContent="2">
-                      <button class="btn copyBtn"> <i data-feather="clipboard"></i></button>
-                      <pre class="overflow-auto language-html custom-scroll"><code>&lt;div class="checkout-detail"&gt;
+                      <button class="btn copyBtn dark:text-white dark:bg-sidebar-dark dark:hover:bg-sidebar-dark dark:hover:text-white"><i data-feather="clipboard"></i></button>
+                      <pre class="overflow-auto language-html custom-scroll dark:bg-sidebar-dark2"><code class="dark:bg-sidebar-dark2">&lt;div class="checkout-detail"&gt;
   &lt;div class="flex mb-2 select-none validation-bar"&gt;
      &lt;div class="w-full text-center step"&gt;
           &lt;p class="mb-2 text-xs font-medium text-title"&gt;Name&lt;/p&gt;
