--- a/html/template/table.html
+++ b/html/template/table.html
@@ -1086,7 +1086,7 @@
                         </tr>
                       </thead>
                       <tbody>
-                        <tr class="hover:bg-gray-light">
+                        <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2">
                           <td class="min-w-[20px]">
                             <div class="flex items-center gap-2">
                               <label class="checkbox w-[15px] h-[15px]">
@@ -1111,7 +1111,7 @@
                             <h4 class="text-xs font-semibold text-title">July 18, 2011</h4>
                           </td>
                         </tr>
-                        <tr class="hover:bg-gray-light">
+                        <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2">
                           <td class="min-w-[20px]">
                             <div class="flex items-center gap-2">
                               <label class="checkbox w-[15px] h-[15px]">
@@ -1136,7 +1136,7 @@
                             <h4 class="text-xs font-semibold text-title">Apr 12, 2014</h4>
                           </td>
                         </tr>
-                        <tr class="hover:bg-gray-light">
+                        <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2">
                           <td class="min-w-[20px]">
                             <div class="flex items-center gap-2">
                               <label class="checkbox w-[15px] h-[15px]">
@@ -1161,7 +1161,7 @@
                             <h4 class="text-xs font-semibold text-title">January 01, 2016</h4>
                           </td>
                         </tr>
-                        <tr class="hover:bg-gray-light">
+                        <tr class="hover:bg-gray-light dark:hover:bg-sidebar-dark2">
                           <td class="min-w-[20px]">
                             <div class="flex items-center gap-2">
                               <label class="checkbox w-[15px] h-[15px]">
@@ -1196,7 +1196,7 @@
               <div class="card">
                 <div class="card-header border-b-0">
                   <div class="flex flex-col">
-                    <h3 class="text-lg font-medium">Hoverable</h3>
+                    <h3 class="text-lg font-medium">Hoverable </h3>
                   </div>
                 </div>
                 <div class="card-body">
@@ -1258,36 +1258,36 @@
                     <table class="table table-bordered">
                       <thead>
                         <tr>
-                          <th class="border border-border-light">No</th>
-                          <th class="border border-border-light">Name</th>
-                          <th class="border border-border-light">Job</th>
-                          <th class="border border-border-light">Color</th>
+                          <th class="border border-border-light dark:border-border-dark">No</th>
+                          <th class="border border-border-light dark:border-border-dark">Name</th>
+                          <th class="border border-border-light dark:border-border-dark">Job</th>
+                          <th class="border border-border-light dark:border-border-dark">Color</th>
                         </tr>
                       </thead>
                       <tbody>
                         <tr>
-                          <td class="min-w-[.625rem]  rounded border border-border-light">1</td>
-                          <td class="min-w-[.625rem] rounded  border border-border-light">Erik M. Pate</td>
-                          <td class="min-w-[1.25rem] rounded  border border-border-light">The Bird</td>
-                          <td class="min-w-[.625rem]  rounded border border-border-light">Blue</td>
+                          <td class="min-w-[.625rem]  rounded border border-border-light dark:border-border-dark">1</td>
+                          <td class="min-w-[.625rem] rounded  border border-border-light dark:border-border-dark">Erik M. Pate</td>
+                          <td class="min-w-[1.25rem] rounded  border border-border-light dark:border-border-dark">The Bird</td>
+                          <td class="min-w-[.625rem]  rounded border border-border-light dark:border-border-dark">Blue</td>
                         </tr>
                         <tr>
-                          <td class="min-w-[.625rem]  rounded border border-border-light">2</td>
-                          <td class="min-w-[.625rem] rounded  border border-border-light">Larry K. Wyatt</td>
-                          <td class="min-w-[1.25rem] rounded  border border-border-light">Ottandy</td>
-                          <td class="min-w-[.625rem]  rounded border border-border-light">Purple</td>
+                          <td class="min-w-[.625rem]  rounded border border-border-light dark:border-border-dark">2</td>
+                          <td class="min-w-[.625rem] rounded  border border-border-light dark:border-border-dark">Larry K. Wyatt</td>
+                          <td class="min-w-[1.25rem] rounded  border border-border-light dark:border-border-dark">Ottandy</td>
+                          <td class="min-w-[.625rem]  rounded border border-border-light dark:border-border-dark">Purple</td>
                         </tr>
                         <tr>
-                          <td class="min-w-[.625rem]  rounded border border-border-light">3</td>
-                          <td class="min-w-[.625rem] rounded  border border-border-light">Patti J. Cortez</td>
-                          <td class="min-w-[1.25rem] rounded  border border-border-light">Orton</td>
-                          <td class="min-w-[.625rem]  rounded border border-border-light">Green</td>
+                          <td class="min-w-[.625rem]  rounded border border-border-light dark:border-border-dark">3</td>
+                          <td class="min-w-[.625rem] rounded  border border-border-light dark:border-border-dark">Patti J. Cortez</td>
+                          <td class="min-w-[1.25rem] rounded  border border-border-light dark:border-border-dark">Orton</td>
+                          <td class="min-w-[.625rem]  rounded border border-border-light dark:border-border-dark">Green</td>
                         </tr>
                         <tr>
-                          <td class="min-w-[.625rem]  rounded border border-border-light">4</td>
-                          <td class="min-w-[.625rem] rounded  border border-border-light">Teena C. Marshall</td>
-                          <td class="min-w-[1.25rem] rounded  border border-border-light">Deo</td>
-                          <td class="min-w-[.625rem]  rounded border border-border-light">Red</td>
+                          <td class="min-w-[.625rem]  rounded border border-border-light dark:border-border-dark">4</td>
+                          <td class="min-w-[.625rem] rounded  border border-border-light dark:border-border-dark">Teena C. Marshall</td>
+                          <td class="min-w-[1.25rem] rounded  border border-border-light dark:border-border-dark">Deo</td>
+                          <td class="min-w-[.625rem]  rounded border border-border-light dark:border-border-dark">Red</td>
                         </tr>
                       </tbody>
                     </table>
@@ -1630,7 +1630,7 @@
                 </div>
                 <div class="card-body">
                   <div class="overflow-auto custom-scroll">  
-                    <table class="table table-bordered table-variant">
+                    <table class="table table-bordered table-variant ">
                       <thead> 
                         <tr> 
                           <th>#</th>
